objects/PicklistMigrationMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PicklistMigrationMapping Local to Global - Holds Existing New Value and old Values used in Batch class for one time migration</description>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <description>Hold the field API whose New and Old values are present</description>
        <label>FieldAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <description>Hold the existing new value</description>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPI__c</fullName>
        <description>Hold the object API name</description>
        <label>ObjectAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <description>Holds the old values</description>
        <label>OldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PicklistMigrationMappings</label>
</CustomObject>